# Dutch-ParticulateMatter-Modelling

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
src/pm_modelling/: main.py  test_main.py
